<resources>
    <string name="app_name">Settlers of Catan</string>
    <string name="img_description_city">Build City</string>
    <string name="img_description_settlement">Build Settlement</string>
    <string name="img_description_road">Build Road</string>
    <string name="join_server">Join Server</string>
    <string name="create_server">Create Server</string>
    <string name="username">Username</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="player">Player</string>
    <string name="start_game">Start Game</string>
    <string name="wait_for_host">Waiting for the host to start the game…</string>
    <string name="connection_error">Connection Error</string>
    <string name="could_not_connect">Could not connect to %1$s</string>
    <string name="quit_lobby_title">Leave Lobby?</string>
    <string name="quit_lobby_confirmation">Do you really want to leave the lobby?</string>
    <string name="development_knights">Knights</string>
    <string name="knights_description">Move the robbers.
        Steal 1 resource from the owner of a settlement
        or city adjacent to the robber\'s new hex.</string>
    <string name="development_victory_points">Victory Point Cards</string>
    <string name="victory_point_description">1 additional victory point.</string>
    <string name="development_monopoly">Monopoly</string>
    <string name="monopoly_description">When you play this card, announce 1 type of resource.
        All other players must give you all of their resources of that type.</string>
    <string name="development_year_of_plenty">Year of Plenty</string>
    <string name="year_of_plenty_description">Take any 2 resources of the bank.
        Add them to your hand. They can be 2 of the same
        resource or 2 different resources.</string>
    <string name="development_road_building">Road building</string>
    <string name="road_building_description">When you play this card,
        you can immediately place 2 roads free of charge.</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="end_game">End Game</string>
    <string name="first">1. %1$s </string>
    <string name="second">2. %1$s </string>
    <string name="third">3. %1$s </string>
    <string name="fourth">4. %1$s </string>
    <string name="title_activity_trade">TradeActivity</string>
    <string name="trade_title">Trade Overview</string>
    <string name="move_robber">Move Robber</string>
    <string name="end_turn">End Turn</string>
    <string name="trade">Trade</string>
    <string name="points">Points:</string>
    <string name="player_name">Player name</string>
    <string name="development">Development</string>
    <string name="complete_trade">Complete Trade</string>
    <string name="cancel">Cancel</string>
    <string name="turn_message">Your turn!</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="trade_offer_to">Offer Trade to:</string>
    <string name="enter_the_world_of_catan">Enter the World of Catan</string>
    <string name="ranking_resources">Ranking Resources</string>
    <string name="choose_your_color">Choose your color:</string>
    <string name="game_rules">Game Rules</string>
    <string name="_1_resource_production">1. Resource production</string>
    <string name="video">VIDEO</string>
    <string name="resource_production_explanation">Before you do anything else on your turn, you must roll the two dice. The result applies to everyone and usually means you get to take a resource from the resource stacks depending on the number you’ve rolled and where your settlements are based. For example, Red rolls a 9, which means they receive a sheep this turn as their settlement sits on the corner of a hex with a 9 marker that produces sheep. White is on the other side of that same hex and will also receive a sheep. There is another 9 at the top of the board, too; Yellow sits on that hex and receives a wheat. Every player needs to make sure they keep track of their own settlements and whether or not they receive a resource on any given roll. Catan is a game of probability to a certain extent, as the resources that come up will be determined by the dice that get rolled. 7 is the most likely number to be rolled with two dice and is treated slightly differently…</string>
    <string name="robber__explanation_title">How does the robber work in Catan?</string>
    <string name="robber_explanation">If you roll a 7 on your turn in Catan, you activate the robber. Any player that has more than seven resource cards in their hand must return half of them (rounded down) to the resource stacks. That includes the person who activated the robber. You now get to move the robber onto one of the numbers on the board, covering up that number - stopping players from gaining resources from adjacent settlements if that number is rolled - until the robber is moved again. As they are a robber, you also get to steal a resource at random from a player with a settlement next to the number you cover. If the robber affects more than one player, choose one to take a resource from.</string>
    <string name="_2_trade">2. Trade</string>
    <string name="trade_explanation">There are two types of trading in Catan: domestic and maritime. Domestic trading is just a fancy way of saying you can trade with your fellow players. You can announce what you’re after and what you’d be willing to trade for it. Your fellow players can make counter offers and proposals to you (but not to each other!) Maritime trading does not involve the other players and can be incredibly useful when your opponents are being particularly stubborn about trading. Maritime trading allows you to trade four of one good for one of another. You can perform this action this no matter what, but if you have a settlement or city on a harbour, you get a rebate of some kind based on the token - such as being able to trade at 3:1 or sometimes even 2:1 for a specific resource.</string>
    <string name="_3_building">3. Building</string>
    <string name="building_explanation">The last part of each player’s turn is the building phase. You can build any number of things on your turn as long as you have the resources available and the building materials in your pool.</string>
    <string name="roads">Roads</string>
    <string name="roads_explanation">Building roads costs one brick and one wood. Roads are placed on the edges of hexes and will allow you to build settlements further afield, giving you an opportunity to gain more resources. The first player to build a road at least five sections long (in a single stretch - not including forks) receives the Longest Road card, which is worth two victory points at the end of the game. If another player exceeds the length of that person’s road, they get to take that card from them - so the Longest Road card is never entirely safe in any one player’s possession.</string>
    <string name="settlements">Settlements</string>
    <string name="cities">Cities</string>
    <string name="settlement_explanation">Building settlements requires a brick, a wood, a sheep and a wheat. Getting settlements on the board quickly can be quite an important strategy in the game, as each settlement is worth one victory point. You need 10 victory points to win the game. You can only ever place a settlement somewhere that is connected by your roads and you need to be at least two spaces away from another settlement, including your own. That means no settlement can be adjacent to another settlement. As well as giving you a precious victory point, each settlement rewards you with resources whenever one of the numbers next to it is rolled.</string>
    <string name="city_explanation">Building a city requires three ore and two wheat, plus an existing settlement. A city in Catan is like a hotel in Monopoly; it’s an upgrade. You can only build a city if you have a settlement on the board that can be replaced with the new city. Cities will earn you double the resources and are worth two victory points each.</string>
    <string name="development_cards">Development cards</string>
    <string name="development_cars_explanation">Buying development cards is also part of the building phase and costs one sheep, one ore and one wheat. It’s a bit of a lucky dip as you are buying blindly from a stack of cards but they are all beneficial to you. Development cards are kept hidden from your opponents until a certain point depending on the individual card. It’s important to note that you cannot play a development card on the same turn that you have bought it. All instructions are written on the cards. There are three types of development cards: knights, progress cards and victory points cards. Knights are similar to the Longest Road card in that the first player to play three knights in front of them will receive a two-point bonus for having the Largest Army. But, just like the Longest Road, this card can be stolen by another player if their army is larger than yours. Knights also activate the robber when played, in which case you behave as if you had just rolled a 7.</string>
    <string name="development_cards__explanation2">Progress cards vary and what they do is laid out very clearly on each card. They usually give you resources or allow you to build without spending resources. Once played, the card is removed from the game. Victory point cards are the juiciest of the development cards, as they speed up your road to victory and remain hidden until you have enough victory points to win the game on your turn. Victory points cards are the only development cards that can be played on the same turn they are purchased.</string>
    <string name="scoring_explanation_title">Scoring and end of the game</string>
    <string name="scoring_explanation">The aim of Catan is simple: the first player to 10 victory points on their turn wins. Make sure to keep count of your victory points (and your opponents’!) throughout the game by keeping track of buildings and any Longest Road/Largest Army bonuses.</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="make_counteroffer">Make Counteroffer</string>
    <string name="back">Back</string>
    <string name="total_used_resources">Total used Resources</string>
    <string name="count">Count:</string>
    <string name="play_card">Play Card</string>
    <string name="road">ROAD:</string>
    <string name="settlement">SETTLEMENT:</string>
    <string name="city">CITY:</string>
    <string name="development_capital">DEVELOPMENT:</string>
    <string name="close">Close</string>
    <string name="symbol_plus">+</string>
    <string name="choose_a_resource">Choose a resource:</string>
    <string name="wood">Wood</string>
    <string name="wheat">Wheat</string>
    <string name="sheep">Sheep</string>
    <string name="clay">Clay</string>
    <string name="ore">Ore</string>
    <string name="confirm">Confirm</string>
    <string name="_0">0</string>
    <string name="i_receive">I receive:</string>
    <string name="i_give">I give:</string>
    <string name="trade_offer_from">Trade offer from %1$s</string>
    <string name="bank">Bank</string>
    <string name="has_cheated">%1$s has cheated!</string>
    <string name="has_not_cheated">%1$s has NOT cheated!</string>
</resources>