<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_a_resource"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_wood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wood"
        app:layout_constraintEnd_toStartOf="@+id/txt_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog" />

    <Button
        android:id="@+id/btn_wheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wheat"
        app:layout_constraintEnd_toEndOf="@+id/btn_wood"
        app:layout_constraintStart_toStartOf="@+id/btn_wood"
        app:layout_constraintTop_toBottomOf="@+id/btn_wood" />

    <Button
        android:id="@+id/btn_sheep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sheep"
        app:layout_constraintEnd_toEndOf="@+id/txt_dialog"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog" />

    <Button
        android:id="@+id/btn_clay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sheep"
        app:layout_constraintStart_toStartOf="@+id/btn_sheep"
        app:layout_constraintTop_toBottomOf="@+id/btn_sheep" />

    <Button
        android:id="@+id/btn_ore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_dialog"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>