<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

  <com.example.settlersofcatan.MapView
      android:id="@+id/mapView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.example.settlersofcatan.PlayerView
      android:id="@+id/playerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <ImageView
      android:id="@+id/btn_city"
      android:layout_width="50dp"
      android:layout_height="30dp"
      android:layout_marginEnd="60dp"
      android:layout_marginRight="60dp"
      android:layout_marginBottom="50dp"
      android:contentDescription="@string/img_description_city"
      android:onClick="onClick"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@drawable/city_white"
      tools:ignore="VectorDrawableCompat" />

  <ImageView
      android:id="@+id/btn_settlement"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginBottom="50dp"
      android:contentDescription="@string/img_description_settlement"
      android:onClick="onClick"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn_city"
      app:layout_constraintStart_toEndOf="@+id/btn_road"
      app:srcCompat="@drawable/settlement_white"
      tools:ignore="VectorDrawableCompat" />

  <ImageView
      android:id="@+id/btn_road"
      android:layout_width="50dp"
      android:layout_height="30dp"
      android:layout_marginStart="60dp"
      android:layout_marginLeft="60dp"
      android:layout_marginBottom="50dp"
      android:contentDescription="@string/img_description_road"
      android:onClick="onClick"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/road_white" />

</androidx.constraintlayout.widget.ConstraintLayout>